--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,182 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pangolin&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+::selection {
+  background-color: aqua;
+}
+
+.header {
+  width: 100%;
+  background-color: yellow;
+  padding: 20px 10px;
+  overflow: hidden;
+  text-align: center;
+  font-family: "Yusei Magic", sans-serif;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 50px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  margin: auto;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: black;
+  text-align: center;
+  text-shadow: 5px 5px 10px blue;
+  font-size: 15px;
+  margin-bottom: 10px;
+  background-color: #f1f1f1;
+}
+
+/* .main__note {
+  width: 50%;
+  padding: 20px 10px;
+  background-color: pink;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}  */
+
+.main__note {
+  width: 500px;
+  padding: 15px 10px 5px 10px;
+  /* margin -> top right bottom left */
+  margin: 20px auto;
+}
+
+form {
+  min-height: 50px;
+  color: white;
+  padding: 15px 10px 5px 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+  position: relative;
+}
+
+input {
+  width: 100%;
+  line-height: 30px;
+  background: transparent;
+  border: none;
+  outline: none;
+  text-align: center;
+  text-shadow: 5px 5px 10px #95df95;
+  font-size: 2rem;
+  font-family: "Noto Sans JP", sans-serif;
+  margin: 10px 0;
+  /* font-weight: bold; */
+}
+
+textarea {
+  width: 100%;
+  line-height: 30px;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  margin: 10px 0;
+  font-family: "Pangolin", cursive;
+  color: hotpink;
+  margin: 20px;
+}
+
+.button__Note {
+  width: 50px;
+  height: 60px;
+  position: absolute;
+  bottom: -28px;
+  left: 370px;
+  cursor: pointer;
+  border: none;
+  outline: none !important;
+  background-color: #fff !important;
+  box-shadow: 2px 2px 2px #888888;
+  border-radius: 50% !important;
+}
+
+.button__Note:hover {
+  background-color: rgba(233, 163, 227, 0.7) !important;
+}
+
+.plus__sign {
+  color: hsl(172, 63%, 56%);
+  display: inline-block;
+  position: absolute;
+  font-size: 30px;
+  background: transparent;
+  /* width:15%; */
+}
+
+.note__style {
+  background: white;
+  border-radius: 7px;
+  box-shadow: 2px 2px 15px 2px #95df95;
+  width: 240px;
+  margin: 16px;
+  float: left;
+  text-align: center;
+}
+
+.note__style h1 {
+  font: 1.1rem;
+  margin-bottom: 6px;
+  font-family: 'Ubuntu', sans-serif;
+  text-shadow:5px 5px 10px #00FF00;
+  font-weight: lighter;
+}
+
+.note__style p {
+  font-size: 1rem;
+  margin-bottom: 10px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.btn__style{
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  color: #f4b400;
+  border: none;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  cursor: pointer;
+  outline: none;
+  box-shadow:  3px 3px 15px -10px rgba(0,0,0,alpha);
+  border-radius: 50% !important;
+}
+
+.delete__icon {
+  width: 0.7rem;
+  height: 0.7rem;
+  color: #f4b400;
+}
+
+.note__style .btn__style:hover .delete__icon{
+  background-color: yellow;
 }
